Updated translation keys to ensure better translations overall.

--- a/templates/actor/actor-secondary-resources.hbs
+++ b/templates/actor/actor-secondary-resources.hbs
@@ -2,9 +2,9 @@
   <div class='resources grid grid-4col'>
     <div class='erps-stat-box erps-stat-box--neutral'>
       <header class='erps-stat-box__upper'>
-        <h4 class='erps-stat-box__label'>Dice Pool</h4>
+        <h4 class='erps-stat-box__label'>{{localize "EVENTIDE_RP_SYSTEM.UI.DicePool"}}</h4>
       </header>
-      <div class='erps-stat-box__lower' aria-label="Dice Pool Value">
+      <div class='erps-stat-box__lower' aria-label="{{localize 'EVENTIDE_RP_SYSTEM.AriaLabels.DicePoolValue'}}">
         <span class="erps-stat-box__value" title="{{localize 'EVENTIDE_RP_SYSTEM.UI.AvailableDice'}}">
           {{system.hiddenAbilities.dice.total}}
         </span>
@@ -13,9 +13,9 @@
 
     <div class='erps-stat-box erps-stat-box--neutral'>
       <header class='erps-stat-box__upper'>
-        <h4 class='erps-stat-box__label'>Fail Range</h4>
+        <h4 class='erps-stat-box__label'>{{localize "EVENTIDE_RP_SYSTEM.UI.FailRange"}}</h4>
       </header>
-      <div class='erps-stat-box__lower' aria-label="Fail Range Value">
+      <div class='erps-stat-box__lower' aria-label="{{localize 'EVENTIDE_RP_SYSTEM.AriaLabels.FailRangeValue'}}">
         <span class="erps-stat-box__value" title="{{localize 'EVENTIDE_RP_SYSTEM.UI.FailMinimum'}}">
           {{system.hiddenAbilities.fmin.total}}
         </span>
@@ -28,9 +28,9 @@
 
     <div class='erps-stat-box erps-stat-box--neutral'>
       <header class='erps-stat-box__upper'>
-        <h4 class='erps-stat-box__label'>Crit Range</h4>
+        <h4 class='erps-stat-box__label'>{{localize "EVENTIDE_RP_SYSTEM.UI.CritRange"}}</h4>
       </header>
-      <div class='erps-stat-box__lower' aria-label="Critical Range Value">
+      <div class='erps-stat-box__lower' aria-label="{{localize 'EVENTIDE_RP_SYSTEM.AriaLabels.CriticalRangeValue'}}">
         <span class="erps-stat-box__value" title="{{localize 'EVENTIDE_RP_SYSTEM.UI.CriticalMinimum'}}">
           {{system.hiddenAbilities.cmin.total}}
         </span>
@@ -43,9 +43,9 @@
 
     <div class='erps-stat-box erps-stat-box--neutral'>
       <header class='erps-stat-box__upper'>
-        <h4 class='erps-stat-box__label'>Stat Total</h4>
+        <h4 class='erps-stat-box__label'>{{localize "EVENTIDE_RP_SYSTEM.UI.StatTotal"}}</h4>
       </header>
-      <div class='erps-stat-box__lower' aria-label="Total Stat Points Value">
+      <div class='erps-stat-box__lower' aria-label="{{localize 'EVENTIDE_RP_SYSTEM.AriaLabels.TotalStatPointsValue'}}">
         <span class="erps-stat-box__value" title="{{localize 'EVENTIDE_RP_SYSTEM.UI.TotalStatPoints'}}">
           {{system.statTotal.value}}
         </span>
