--- a/templates/actor/effects.hbs
+++ b/templates/actor/effects.hbs
@@ -6,7 +6,7 @@
 >
   {{#each effects as |section sid|}}
     <div class="eventide-sheet-data-section__header">
-      <h3 class="eventide-sheet-data-section__title">{{localize "EVENTIDE_RP_SYSTEM.Actor.Sections.Effects"}}</h3>
+      <h3 class="eventide-sheet-data-section__title">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</h3>
     </div>
 
     <table class='erps-data-table erps-data-table--effects'>
