--- a/templates/item/embedded-items.hbs
+++ b/templates/item/embedded-items.hbs
@@ -84,7 +84,7 @@
     <!-- Effects Section -->
     <div class="erps-items-panel">
       <div class="erps-items-panel__section-header">
-        {{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.Effects"}}
+        {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}
       </div>
 
       {{#if embeddedEffects.length}}
