Enhanced transformation sheets to handle input similar to action card sheets and changed creator to simply create and open the sheet for edit given its gotten far more complicated than a simple creator should be used for.

--- a/templates/item/attribute-parts/transformation.hbs
+++ b/templates/item/attribute-parts/transformation.hbs
@@ -5,7 +5,9 @@
       <div class="form-fields">
         <select class="erps-select" name="system.size" data-dtype="Number">
           {{#each sizeOptions as |size|}}
-            <option value="{{size}}" {{#if (eq ../system.size size)}}selected{{/if}}>{{size}}×</option>
+            <option value="{{size}}" {{#if (eq ../system.size size)}}selected{{/if}}>
+              {{#if (eq size 0)}}No Size Change{{else}}{{size}}×{{/if}}
+            </option>
           {{/each}}
         </select>
       </div>
