--- a/templates/macros/transformation-creator.hbs
+++ b/templates/macros/transformation-creator.hbs
@@ -111,126 +111,9 @@
     {{/if}}
 
     <div class="erps-form__section">
-      <div class="erps-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.CombatPowers"}}</div>
-      <div class="erps-items-panel">
-        {{#if embeddedCombatPowers.length}}
-          <ol class="erps-items-panel__list erps-items-panel__list--three-column">
-            <li class="erps-items-panel__item erps-items-panel__item--header">
-              <div class="erps-items-panel__cell erps-items-panel__cell--image">{{localize 'Image'}}</div>
-              <div class='erps-items-panel__cell erps-items-panel__cell--name'>{{localize 'Name'}}</div>
-              <div class='erps-items-panel__cell erps-items-panel__cell--controls'>{{localize 'Controls'}}</div>
-            </li>
-            {{#each embeddedCombatPowers}}
-              <li
-                class="erps-items-panel__item"
-                data-item-id="{{this.id}}"
-                data-drag="true"
-                data-document-class="Item"
-              >
-                <div class="erps-items-panel__cell erps-items-panel__cell--image">
-                  <img
-                    class="erps-items-panel__image"
-                    src="{{this.img}}"
-                    title="{{this.name}}"
-                    width="24"
-                    height="24"
-                  />
-                </div>
-                <div class="erps-items-panel__cell erps-items-panel__cell--name">
-                  <span class="erps-items-panel__name">{{this.name}}</span>
-                </div>
-                <div class="erps-items-panel__cell erps-items-panel__cell--controls">
-                  <a 
-                    class="erps-items-panel__control erps-items-panel__control--view" 
-                    data-action="viewCombatPower" 
-                    data-power-id="{{this.id}}" 
-                    title="{{localize 'EVENTIDE_RP_SYSTEM.UI.View'}}"
-                  >
-                    <i class="fas fa-eye"></i>
-                  </a>
-                  <a 
-                    class="erps-items-panel__control erps-items-panel__control--delete" 
-                    data-action="removeCombatPower" 
-                    data-power-id="{{this.id}}" 
-                    title="{{localize 'EVENTIDE_RP_SYSTEM.UI.Remove'}}"
-                  >
-                    <i class="fas fa-trash"></i>
-                  </a>
-                </div>
-              </li>
-            {{/each}}
-          </ol>
-        {{else}}
-          <div class="erps-items-panel__empty">{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.NoPowers"}}</div>
-        {{/if}}
-
-        <div class="erps-items-panel__drop-zone" data-drop-zone="combatPower">
-          <p>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.DropPowerHere"}}</p>
-        </div>
-
-        <div class="erps-items-panel__notes">{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.Notes"}}</div>
-      </div>
-    </div>
-
-    <div class="erps-form__section">
-      <div class="erps-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ActionCards"}}</div>
-      <div class="erps-items-panel">
-        {{#if embeddedActionCards.length}}
-          <ol class="erps-items-panel__list erps-items-panel__list--three-column">
-            <li class="erps-items-panel__item erps-items-panel__item--header">
-              <div class="erps-items-panel__cell erps-items-panel__cell--image">{{localize 'Image'}}</div>
-              <div class='erps-items-panel__cell erps-items-panel__cell--name'>{{localize 'Name'}}</div>
-              <div class='erps-items-panel__cell erps-items-panel__cell--controls'>{{localize 'Controls'}}</div>
-            </li>
-            {{#each embeddedActionCards}}
-              <li
-                class="erps-items-panel__item"
-                data-item-id="{{this.id}}"
-                data-drag="true"
-                data-document-class="Item"
-              >
-                <div class="erps-items-panel__cell erps-items-panel__cell--image">
-                  <img
-                    class="erps-items-panel__image"
-                    src="{{this.img}}"
-                    title="{{this.name}}"
-                    width="24"
-                    height="24"
-                  />
-                </div>
-                <div class="erps-items-panel__cell erps-items-panel__cell--name">
-                  <span class="erps-items-panel__name">{{this.name}}</span>
-                </div>
-                <div class="erps-items-panel__cell erps-items-panel__cell--controls">
-                  <a
-                    class="erps-items-panel__control erps-items-panel__control--view"
-                    data-action="viewActionCard"
-                    data-action-card-id="{{this.id}}"
-                    title="{{localize 'EVENTIDE_RP_SYSTEM.UI.View'}}"
-                  >
-                    <i class="fas fa-eye"></i>
-                  </a>
-                  <a
-                    class="erps-items-panel__control erps-items-panel__control--delete"
-                    data-action="removeActionCard"
-                    data-action-card-id="{{this.id}}"
-                    title="{{localize 'EVENTIDE_RP_SYSTEM.UI.Remove'}}"
-                  >
-                    <i class="fas fa-trash"></i>
-                  </a>
-                </div>
-              </li>
-            {{/each}}
-          </ol>
-        {{else}}
-          <div class="erps-items-panel__empty">{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.NoActionCards"}}</div>
-        {{/if}}
-
-        <div class="erps-items-panel__drop-zone" data-drop-zone="actionCard">
-          <p>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.DropActionCardHere"}}</p>
-        </div>
-
-        <div class="erps-items-panel__notes">{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.ActionCardNotes"}}</div>
+      <div class="erps-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.CreationNote"}}</div>
+      <div class="erps-info-panel">
+        <p>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.TransformationCreatorNote"}}</p>
       </div>
     </div>
 
