Improved general layout of action card columns and added new details that can be read from action cards including css overrides to call out improperly configured action cards.

--- a/src/scss/components/sheet/items-panel/_grid-system.scss
+++ b/src/scss/components/sheet/items-panel/_grid-system.scss
@@ -21,6 +21,11 @@
       grid-template-columns: auto 1fr auto auto;
     }
 
+    // 5-column layout: Image | Name | Embedded Item | Mode | Controls
+    &--five-column {
+      grid-template-columns: auto 1fr auto auto auto;
+    }
+
     // 3-column layout: Image | Name | Controls
     &--three-column {
       grid-template-columns: auto 1fr auto;
