New css for new groups.

--- a/src/scss/components/sheet/items-panel/_index.scss
+++ b/src/scss/components/sheet/items-panel/_index.scss
@@ -19,4 +19,7 @@
 @use "item-components";
 
 // Import special components
-@use "special-components"; 
+@use "special-components";
+
+// Import action card groups
+@use "action-card-groups"; 
