--- a/src/scss/components/sheet/status-cards/_status-bar.scss
+++ b/src/scss/components/sheet/status-cards/_status-bar.scss
@@ -12,14 +12,14 @@
   justify-content: flex-start;
   gap: $status-card-gap;
   width: 100%;
-  margin-top: $status-bar-margin-top;
-  padding: $status-bar-padding;
+  margin-top: 0;
+  padding: 0.375rem 0.75rem;
   background: themes.color(black, 30);
   border-radius: $status-bar-border-radius;
   border: $status-bar-border-width solid themes.color(white, 15);
   box-shadow: inset 0 $shadow-inset-offset 3px themes.color(black, 20);
   position: relative;
-  min-height: 4.2rem;
+  height: 3.5rem;
 
   // Horizontal scrolling with hidden scrollbar
   overflow: auto hidden;
