--- a/templates/item/partials/transformation-action-card-row.hbs
+++ b/templates/item/partials/transformation-action-card-row.hbs
@@ -1,34 +1,34 @@
 {{! Reusable Transformation Action Card Row Partial }}
-<li
-  class="erps-items-panel__item erps-items-panel__item--draggable {{#if (eq actionCard.system.mode 'attackChain')}}{{#unless actionCard.system.embeddedItem}}erps-items-panel__item--warning{{/unless}}{{/if}}"
+<tr
+  class="erps-data-table__row erps-data-table__row--hoverable {{#if (eq actionCard.system.mode 'attackChain')}}{{#unless actionCard.system.embeddedItem.type}}erps-data-table__row--warning{{/unless}}{{/if}}"
   data-item-id="{{actionCard.id}}"
   data-drag="true"
-  title="{{localize 'EVENTIDE_RP_SYSTEM.Item.Transformation.DragToGroup'}}"
+  data-document-class="Item"
+  {{#if actionCard.system.description}}
+  title="{{actionCard.system.description}}"
+  {{/if}}
 >
-  <div class="erps-items-panel__cell erps-items-panel__cell--image" style="background: inherit">
-    <img
-      class="erps-items-panel__image"
-      src="{{actionCard.img}}"
-      title="{{actionCard.name}}"
-      width="24"
-      height="24"
-    />
-    <i class="fas fa-arrows-alt erps-items-panel__drag-indicator" title="{{localize 'EVENTIDE_RP_SYSTEM.Item.Transformation.DragToGroup'}}"></i>
-  </div>
-  <div class="erps-items-panel__cell erps-items-panel__cell--name" style="background: inherit">
-    <span class="erps-items-panel__name">{{actionCard.name}}</span>
-  </div>
-  <div class="erps-items-panel__cell erps-items-panel__cell--center" style="background: inherit">
+  <td class="erps-data-table__cell erps-data-table__cell--name">
+    <div class="erps-data-table__name-content">
+      <img
+        src="{{actionCard.img}}"
+        title="{{actionCard.name}}"
+        width="24"
+        height="24"
+      />
+      <span>{{actionCard.name}}</span>
+    </div>
+  </td>
+  <td class="erps-data-table__cell erps-data-table__cell--center">
     {{#if actionCard.system.embeddedItem._id}}
-      <div class="erps-items-panel__embedded-item">
+      <div class="erps-data-table__embedded-item">
         <img
-          class="erps-items-panel__embedded-item-img"
           src="{{actionCard.system.embeddedItem.img}}"
           title="{{actionCard.system.embeddedItem.name}}"
           width="18"
           height="18"
         />
-        <span class="erps-items-panel__embedded-item-name">{{actionCard.system.embeddedItem.name}}</span>
+        <span>{{actionCard.system.embeddedItem.name}}</span>
       </div>
     {{else}}
       {{#if (eq actionCard.system.mode "attackChain")}}
@@ -39,11 +39,11 @@
         </div>
       {{/if}}
     {{/if}}
-  </div>
-  <div class="erps-items-panel__cell erps-items-panel__cell--center" style="background: inherit">
+  </td>
+  <td class="erps-data-table__cell erps-data-table__cell--center">
     {{#if (eq actionCard.system.mode "attackChain")}}
-      <div class="erps-items-panel__mode-info" title="Attack Chain: {{actionCard.system.attackChain.firstStat}} + {{actionCard.system.attackChain.secondStat}}">
-        <span class="erps-items-panel__mode-stats">
+      <div class="erps-data-table__mode-info" title="Attack Chain: {{actionCard.system.attackChain.firstStat}} + {{actionCard.system.attackChain.secondStat}}">
+        <span class="erps-data-table__mode-stats">
           {{actionCard.system.attackChain.firstStat}} + {{actionCard.system.attackChain.secondStat}}
         </span>
         {{#if (ne actionCard.system.attackChain.damageCondition "never")}}
@@ -54,17 +54,17 @@
         {{/if}}
       </div>
     {{else if (eq actionCard.system.mode "savedDamage")}}
-      <div class="erps-items-panel__mode-info" title="Saved Damage: {{actionCard.system.savedDamage.formula}} {{actionCard.system.savedDamage.type}}">
-        <span class="erps-items-panel__mode-stats">{{actionCard.system.savedDamage.formula}}</span>
+      <div class="erps-data-table__mode-info" title="Saved Damage: {{actionCard.system.savedDamage.formula}} {{actionCard.system.savedDamage.type}}">
+        <span class="erps-data-table__mode-stats">{{actionCard.system.savedDamage.formula}}</span>
         <i class="fas fa-heart-broken" title="{{actionCard.system.savedDamage.type}}"></i>
       </div>
     {{else}}
-      <span class="erps-items-panel__empty-state">{{localize "EVENTIDE_RP_SYSTEM.General.Unknown"}}</span>
+      <span class="erps-data-table__empty-state">{{localize "EVENTIDE_RP_SYSTEM.General.Unknown"}}</span>
     {{/if}}
-  </div>
-  <div class="erps-items-panel__cell erps-items-panel__cell--controls" style="background: inherit">
+  </td>
+  <td class="erps-data-table__cell erps-data-table__cell--controls">
     <a
-      class="erps-items-panel__control erps-items-panel__control--edit"
+      class="erps-data-table__control erps-data-table__control--edit"
       data-action="editEmbeddedActionCard"
       data-action-card-id="{{actionCard.id}}"
       title="{{localize 'EVENTIDE_RP_SYSTEM.UI.Edit'}}"
@@ -73,7 +73,7 @@
     </a>
     {{#if editable}}
       <a
-        class="erps-items-panel__control erps-items-panel__control--delete"
+        class="erps-data-table__control erps-data-table__control--delete"
         data-action="removeActionCard"
         data-action-card-id="{{actionCard.id}}"
         title="{{localize 'EVENTIDE_RP_SYSTEM.UI.Remove'}}"
@@ -81,5 +81,5 @@
         <i class="fas fa-trash"></i>
       </a>
     {{/if}}
-  </div>
-</li>
+  </td>
+</tr>
